--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "diff-ivstyopa",
   "version": "1.0.0",
-  "description": "Second Hexlet project",
+  "description": "Compares two configuration files and shows a difference.",
   "main": "index.js",
-  "repository" :{
-    "type" : "git"
-  , "url" : "https://github.com/xibalbaroad/project-lvl2-s121"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xibalbaroad/project-lvl2-s121"
   },
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
@@ -14,7 +14,8 @@
     "babel-node": "babel-node",
     "eslint": "eslint",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "jest"
   },
   "author": "Stepan Ivanov",
   "license": "ISC",
@@ -25,10 +26,12 @@
     "babel-preset-env": "*",
     "babel-preset-stage-0": "*",
     "eslint": "*",
-    "eslint-config-airbnb-base": "*",
-    "eslint-plugin-import": "*"
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "*",
+    "jest": "*"
   },
   "dependencies": {
-    "commander": "*"
+    "commander": "*",
+    "lodash": "*"
   }
 }
