--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diff-ivstyopa",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Compares two configuration files and shows a difference.",
   "main": "index.js",
   "repository": {
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "commander": "*",
+    "ini": "^1.3.4",
     "js-yaml": "^3.9.1",
     "lodash": "*"
   }
