--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "diff-ivstyopa",
   "version": "1.0.6",
   "description": "Compares two configuration files and shows a difference.",
-  "main": "src/genDiff.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/xibalbaroad/project-lvl2-s121"
